--- a/css/main.web.css
+++ b/css/main.web.css
@@ -2,7 +2,7 @@
 -------------------------------------------------- */
 @font-face {
     font-family: Seravek;
-    src: url('../fonts/Seravek-Bold.ttf');
+    src: url('../fonts/seravek-bold-webfont.woff');
 }
 
 div {
